--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Soon</h1>
+<!doctype html>
+<html>
+  <head>
+    <title>aliv</title>
+  </head>
+
+  <body>
+    <script src="./bundle.js"></script> 
+  </body>
+</html>
