--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
     <title>aliv</title>
   </head>
 
-  <body>
-    <script src="./bundle.js"></script> 
+  <body id="app">
+    <app></app>
+
+    <script src="./bundle.js"></script>
   </body>
 </html>
