--- a/client/dev/face/face.html
+++ b/client/dev/face/face.html
@@ -1,6 +1,6 @@
 <div>
   <h1 :style="style"
-      id="logo">aliv</h1>
+      class="logo">aliv</h1>
 
   <span v-for="badge in badges"
         track-by="$index"
