--- a/client/dev/footer/footer.html
+++ b/client/dev/footer/footer.html
@@ -1,3 +1,4 @@
 <footer>
-  <h3>footer</h3>
+  <p>Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a>.</p>
+  <p>Made with heart by <a href="https://github.com/ericmdantas">Eric M. Dantas</a>.</p>
 </footer>
