--- a/client/dev/header/header.html
+++ b/client/dev/header/header.html
@@ -1,3 +1,9 @@
 <header>
-  <h3>header</h3>
+  <h3 class="left logo">aliv</h3>
+
+  <div class="header-options-container right">
+    <a class="header-option" href="#usage">Usages</a>
+    <a class="header-option" href="#">Options</a>
+    <a class="header-option" href="https://github.com/ericmdantas/aliv">Github</a>
+  </div>
 </header>
