--- a/client/dev/face/face.html
+++ b/client/dev/face/face.html
@@ -1,6 +1,12 @@
 <div>
-  <h1 :style="style"
+  <div>
+    <h1 :style="style"
       class="logo">aliv</h1>
+  </div>
+
+  <div>
+    <p class="slogan">Light, fast, powerful and intuitive one liner live-reloading Node.js server.</p>
+  </div>
 
   <span v-for="badge in badges"
         track-by="$index"
