--- a/client/dev/face/face.html
+++ b/client/dev/face/face.html
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1 :style="style"
-      class="logo">aliv</h1>
+      class="logo pulse">ALIV</h1>
   </div>
 
   <div>
@@ -11,8 +11,8 @@
   <span v-for="badge in badges"
         track-by="$index"
         class="badge">
-    <a :href="badge.url">
-      <img :src="badge.icon" />
-    </a>
+          <a :href="badge.url">
+            <img :src="badge.icon" />
+          </a>
   </span>
 </div>
