--- a/client/dev/app/app.html
+++ b/client/dev/app/app.html
@@ -2,6 +2,8 @@
 
 <main>
   <aliv-face></aliv-face>
+  <aliv-options></aliv-options>
+  <aliv-usage></aliv-usage>
 </main>
 
 <aliv-footer></aliv-footer>
