--- a/client/dev/header/header.html
+++ b/client/dev/header/header.html
@@ -1,9 +1,11 @@
 <header>
-  <h3 class="left logo">aliv</h3>
+  <div class="header">
+    <h3 class="left logo">aliv</h3>
 
-  <div class="header-options-container right">
-    <a class="header-option" href="#usage">Usages</a>
-    <a class="header-option" href="#">Options</a>
-    <a class="header-option" href="https://github.com/ericmdantas/aliv">Github</a>
+    <div class="header-options-container right">
+      <a class="header-option" href="#usage">Usage</a>
+      <a class="header-option" href="#options">Options</a>
+      <a class="header-option" href="https://github.com/ericmdantas/aliv" target="_blank">Github</a>
+    </div>
   </div>
 </header>
