--- a/client/dev/app/app.html
+++ b/client/dev/app/app.html
@@ -2,7 +2,8 @@
 
 <main>
   <aliv-face></aliv-face>
-  <aliv-options></aliv-options>
+  <aliv-install></aliv-install>
+  <aliv-explanation></aliv-explanation>
   <aliv-usage></aliv-usage>
 </main>
 
