--- a/client/dev/header/header.html
+++ b/client/dev/header/header.html
@@ -3,8 +3,9 @@
     <h3 class="left logo">aliv</h3>
 
     <div class="header-options-container right">
+      <a class="header-option" href="#install">Install</a>
+      <a class="header-option" href="#what">What</a>
       <a class="header-option" href="#usage">Usage</a>
-      <a class="header-option" href="#options">Options</a>
       <a class="header-option" href="https://github.com/ericmdantas/aliv" target="_blank">Github</a>
     </div>
   </div>
